tantalum_lexer/tests/snapshots/snapshots__conditionals.snap
---
source: tantalum_lexer/tests/snapshots.rs
expression: tokens
snapshot_kind: text
---
[
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 0,
      end: 2,
      line: 1,
      column: 1,
    ),
    lexeme: "fn",
    kind: KeywordFn,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 3,
      end: 7,
      line: 1,
      column: 4,
    ),
    lexeme: "main",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 7,
      end: 8,
      line: 1,
      column: 8,
    ),
    lexeme: "(",
    kind: LeftParen,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 8,
      end: 9,
      line: 1,
      column: 9,
    ),
    lexeme: ")",
    kind: RightParen,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 9,
      end: 10,
      line: 1,
      column: 10,
    ),
    lexeme: ":",
    kind: Colon,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 11,
      end: 14,
      line: 1,
      column: 12,
    ),
    lexeme: "i32",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 15,
      end: 16,
      line: 1,
      column: 16,
    ),
    lexeme: "{",
    kind: LeftBrace,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 21,
      end: 24,
      line: 2,
      column: 4,
    ),
    lexeme: "let",
    kind: KeywordLet,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 25,
      end: 26,
      line: 2,
      column: 8,
    ),
    lexeme: "a",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 26,
      end: 27,
      line: 2,
      column: 9,
    ),
    lexeme: ":",
    kind: Colon,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 28,
      end: 31,
      line: 2,
      column: 11,
    ),
    lexeme: "i32",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 32,
      end: 33,
      line: 2,
      column: 15,
    ),
    lexeme: "=",
    kind: Equal,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 34,
      end: 36,
      line: 2,
      column: 17,
    ),
    lexeme: "10",
    kind: DecimalIntegerLiteral,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 36,
      end: 37,
      line: 2,
      column: 19,
    ),
    lexeme: ";",
    kind: Semicolon,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 42,
      end: 45,
      line: 3,
      column: 4,
    ),
    lexeme: "let",
    kind: KeywordLet,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 46,
      end: 47,
      line: 3,
      column: 8,
    ),
    lexeme: "b",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 47,
      end: 48,
      line: 3,
      column: 9,
    ),
    lexeme: ":",
    kind: Colon,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 49,
      end: 52,
      line: 3,
      column: 11,
    ),
    lexeme: "i32",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 53,
      end: 54,
      line: 3,
      column: 15,
    ),
    lexeme: "=",
    kind: Equal,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 55,
      end: 57,
      line: 3,
      column: 17,
    ),
    lexeme: "20",
    kind: DecimalIntegerLiteral,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 57,
      end: 58,
      line: 3,
      column: 19,
    ),
    lexeme: ";",
    kind: Semicolon,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 63,
      end: 66,
      line: 4,
      column: 4,
    ),
    lexeme: "let",
    kind: KeywordLet,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 67,
      end: 68,
      line: 4,
      column: 8,
    ),
    lexeme: "c",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 68,
      end: 69,
      line: 4,
      column: 9,
    ),
    lexeme: ":",
    kind: Colon,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 70,
      end: 73,
      line: 4,
      column: 11,
    ),
    lexeme: "i32",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 74,
      end: 75,
      line: 4,
      column: 15,
    ),
    lexeme: "=",
    kind: Equal,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 76,
      end: 78,
      line: 4,
      column: 17,
    ),
    lexeme: "30",
    kind: DecimalIntegerLiteral,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 78,
      end: 79,
      line: 4,
      column: 19,
    ),
    lexeme: ";",
    kind: Semicolon,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 85,
      end: 87,
      line: 6,
      column: 4,
    ),
    lexeme: "if",
    kind: KeywordIf,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 88,
      end: 89,
      line: 6,
      column: 7,
    ),
    lexeme: "a",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 90,
      end: 91,
      line: 6,
      column: 9,
    ),
    lexeme: ">",
    kind: RightAngle,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 92,
      end: 93,
      line: 6,
      column: 11,
    ),
    lexeme: "b",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 94,
      end: 95,
      line: 6,
      column: 13,
    ),
    lexeme: "{",
    kind: LeftBrace,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 104,
      end: 110,
      line: 7,
      column: 8,
    ),
    lexeme: "return",
    kind: KeywordReturn,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 111,
      end: 112,
      line: 7,
      column: 15,
    ),
    lexeme: "a",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 112,
      end: 113,
      line: 7,
      column: 16,
    ),
    lexeme: ";",
    kind: Semicolon,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 118,
      end: 119,
      line: 8,
      column: 4,
    ),
    lexeme: "}",
    kind: RightBrace,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 120,
      end: 124,
      line: 8,
      column: 6,
    ),
    lexeme: "else",
    kind: KeywordElse,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 125,
      end: 127,
      line: 8,
      column: 11,
    ),
    lexeme: "if",
    kind: KeywordIf,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 128,
      end: 129,
      line: 8,
      column: 14,
    ),
    lexeme: "b",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 130,
      end: 131,
      line: 8,
      column: 16,
    ),
    lexeme: ">",
    kind: RightAngle,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 132,
      end: 133,
      line: 8,
      column: 18,
    ),
    lexeme: "c",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 134,
      end: 135,
      line: 8,
      column: 20,
    ),
    lexeme: "{",
    kind: LeftBrace,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 144,
      end: 150,
      line: 9,
      column: 8,
    ),
    lexeme: "return",
    kind: KeywordReturn,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 151,
      end: 152,
      line: 9,
      column: 15,
    ),
    lexeme: "b",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 152,
      end: 153,
      line: 9,
      column: 16,
    ),
    lexeme: ";",
    kind: Semicolon,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 158,
      end: 159,
      line: 10,
      column: 4,
    ),
    lexeme: "}",
    kind: RightBrace,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 160,
      end: 164,
      line: 10,
      column: 6,
    ),
    lexeme: "else",
    kind: KeywordElse,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 165,
      end: 166,
      line: 10,
      column: 11,
    ),
    lexeme: "{",
    kind: LeftBrace,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 175,
      end: 181,
      line: 11,
      column: 8,
    ),
    lexeme: "return",
    kind: KeywordReturn,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 182,
      end: 183,
      line: 11,
      column: 15,
    ),
    lexeme: "c",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 183,
      end: 184,
      line: 11,
      column: 16,
    ),
    lexeme: ";",
    kind: Semicolon,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 189,
      end: 190,
      line: 12,
      column: 4,
    ),
    lexeme: "}",
    kind: RightBrace,
  ),
  Token(
    span: Span(
      file_name: "conditionals.ta",
      start: 191,
      end: 192,
      line: 13,
      column: 0,
    ),
    lexeme: "}",
    kind: RightBrace,
  ),
]
