tantalum_lexer/tests/snapshots/snapshots__loops.snap
---
source: tantalum_lexer/tests/snapshots.rs
expression: tokens
snapshot_kind: text
---
[
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 0,
      end: 6,
      line: 1,
      column: 1,
    ),
    lexeme: "extern",
    kind: KeywordExtern,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 7,
      end: 9,
      line: 1,
      column: 8,
    ),
    lexeme: "fn",
    kind: KeywordFn,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 10,
      end: 16,
      line: 1,
      column: 11,
    ),
    lexeme: "printf",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 16,
      end: 17,
      line: 1,
      column: 17,
    ),
    lexeme: "(",
    kind: LeftParen,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 17,
      end: 23,
      line: 1,
      column: 18,
    ),
    lexeme: "format",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 23,
      end: 24,
      line: 1,
      column: 24,
    ),
    lexeme: ":",
    kind: Colon,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 25,
      end: 26,
      line: 1,
      column: 26,
    ),
    lexeme: "*",
    kind: Star,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 26,
      end: 31,
      line: 1,
      column: 27,
    ),
    lexeme: "const",
    kind: KeywordConst,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 32,
      end: 34,
      line: 1,
      column: 33,
    ),
    lexeme: "u8",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 34,
      end: 35,
      line: 1,
      column: 35,
    ),
    lexeme: ",",
    kind: Comma,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 36,
      end: 39,
      line: 1,
      column: 37,
    ),
    lexeme: "...",
    kind: DotDotDot,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 39,
      end: 40,
      line: 1,
      column: 40,
    ),
    lexeme: ")",
    kind: RightParen,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 40,
      end: 41,
      line: 1,
      column: 41,
    ),
    lexeme: ":",
    kind: Colon,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 42,
      end: 45,
      line: 1,
      column: 43,
    ),
    lexeme: "i32",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 45,
      end: 46,
      line: 1,
      column: 46,
    ),
    lexeme: ";",
    kind: Semicolon,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 48,
      end: 50,
      line: 3,
      column: 0,
    ),
    lexeme: "fn",
    kind: KeywordFn,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 51,
      end: 55,
      line: 3,
      column: 3,
    ),
    lexeme: "main",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 55,
      end: 56,
      line: 3,
      column: 7,
    ),
    lexeme: "(",
    kind: LeftParen,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 56,
      end: 57,
      line: 3,
      column: 8,
    ),
    lexeme: ")",
    kind: RightParen,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 57,
      end: 58,
      line: 3,
      column: 9,
    ),
    lexeme: ":",
    kind: Colon,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 59,
      end: 62,
      line: 3,
      column: 11,
    ),
    lexeme: "i32",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 63,
      end: 64,
      line: 3,
      column: 15,
    ),
    lexeme: "{",
    kind: LeftBrace,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 69,
      end: 72,
      line: 4,
      column: 4,
    ),
    lexeme: "let",
    kind: KeywordLet,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 73,
      end: 74,
      line: 4,
      column: 8,
    ),
    lexeme: "a",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 74,
      end: 75,
      line: 4,
      column: 9,
    ),
    lexeme: ":",
    kind: Colon,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 76,
      end: 79,
      line: 4,
      column: 11,
    ),
    lexeme: "i32",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 80,
      end: 81,
      line: 4,
      column: 15,
    ),
    lexeme: "=",
    kind: Equal,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 82,
      end: 84,
      line: 4,
      column: 17,
    ),
    lexeme: "10",
    kind: DecimalIntegerLiteral,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 84,
      end: 85,
      line: 4,
      column: 19,
    ),
    lexeme: ";",
    kind: Semicolon,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 90,
      end: 93,
      line: 5,
      column: 4,
    ),
    lexeme: "let",
    kind: KeywordLet,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 94,
      end: 95,
      line: 5,
      column: 8,
    ),
    lexeme: "b",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 95,
      end: 96,
      line: 5,
      column: 9,
    ),
    lexeme: ":",
    kind: Colon,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 97,
      end: 100,
      line: 5,
      column: 11,
    ),
    lexeme: "i32",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 101,
      end: 102,
      line: 5,
      column: 15,
    ),
    lexeme: "=",
    kind: Equal,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 103,
      end: 105,
      line: 5,
      column: 17,
    ),
    lexeme: "20",
    kind: DecimalIntegerLiteral,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 105,
      end: 106,
      line: 5,
      column: 19,
    ),
    lexeme: ";",
    kind: Semicolon,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 111,
      end: 114,
      line: 6,
      column: 4,
    ),
    lexeme: "let",
    kind: KeywordLet,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 115,
      end: 116,
      line: 6,
      column: 8,
    ),
    lexeme: "c",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 116,
      end: 117,
      line: 6,
      column: 9,
    ),
    lexeme: ":",
    kind: Colon,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 118,
      end: 121,
      line: 6,
      column: 11,
    ),
    lexeme: "i32",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 122,
      end: 123,
      line: 6,
      column: 15,
    ),
    lexeme: "=",
    kind: Equal,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 124,
      end: 126,
      line: 6,
      column: 17,
    ),
    lexeme: "30",
    kind: DecimalIntegerLiteral,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 126,
      end: 127,
      line: 6,
      column: 19,
    ),
    lexeme: ";",
    kind: Semicolon,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 133,
      end: 138,
      line: 8,
      column: 4,
    ),
    lexeme: "while",
    kind: KeywordWhile,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 139,
      end: 140,
      line: 8,
      column: 10,
    ),
    lexeme: "b",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 141,
      end: 142,
      line: 8,
      column: 12,
    ),
    lexeme: ">",
    kind: RightAngle,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 143,
      end: 144,
      line: 8,
      column: 14,
    ),
    lexeme: "a",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 145,
      end: 146,
      line: 8,
      column: 16,
    ),
    lexeme: "{",
    kind: LeftBrace,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 155,
      end: 156,
      line: 9,
      column: 8,
    ),
    lexeme: "a",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 157,
      end: 158,
      line: 9,
      column: 10,
    ),
    lexeme: "=",
    kind: Equal,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 159,
      end: 160,
      line: 9,
      column: 12,
    ),
    lexeme: "a",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 161,
      end: 162,
      line: 9,
      column: 14,
    ),
    lexeme: "+",
    kind: Plus,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 163,
      end: 164,
      line: 9,
      column: 16,
    ),
    lexeme: "1",
    kind: DecimalIntegerLiteral,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 164,
      end: 165,
      line: 9,
      column: 17,
    ),
    lexeme: ";",
    kind: Semicolon,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 175,
      end: 177,
      line: 11,
      column: 8,
    ),
    lexeme: "if",
    kind: KeywordIf,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 178,
      end: 179,
      line: 11,
      column: 11,
    ),
    lexeme: "a",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 180,
      end: 182,
      line: 11,
      column: 13,
    ),
    lexeme: "==",
    kind: EqualEqual,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 183,
      end: 185,
      line: 11,
      column: 16,
    ),
    lexeme: "15",
    kind: DecimalIntegerLiteral,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 186,
      end: 187,
      line: 11,
      column: 19,
    ),
    lexeme: "{",
    kind: LeftBrace,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 200,
      end: 208,
      line: 12,
      column: 12,
    ),
    lexeme: "continue",
    kind: KeywordContinue,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 208,
      end: 209,
      line: 12,
      column: 20,
    ),
    lexeme: ";",
    kind: Semicolon,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 218,
      end: 219,
      line: 13,
      column: 8,
    ),
    lexeme: "}",
    kind: RightBrace,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 224,
      end: 225,
      line: 14,
      column: 4,
    ),
    lexeme: "}",
    kind: RightBrace,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 231,
      end: 237,
      line: 16,
      column: 4,
    ),
    lexeme: "printf",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 237,
      end: 238,
      line: 16,
      column: 10,
    ),
    lexeme: "(",
    kind: LeftParen,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 238,
      end: 247,
      line: 16,
      column: 11,
    ),
    lexeme: "\"a: %d\\n\"",
    kind: StringLiteral,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 247,
      end: 248,
      line: 16,
      column: 20,
    ),
    lexeme: ",",
    kind: Comma,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 249,
      end: 250,
      line: 16,
      column: 22,
    ),
    lexeme: "a",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 250,
      end: 251,
      line: 16,
      column: 23,
    ),
    lexeme: ")",
    kind: RightParen,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 251,
      end: 252,
      line: 16,
      column: 24,
    ),
    lexeme: ";",
    kind: Semicolon,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 258,
      end: 261,
      line: 18,
      column: 4,
    ),
    lexeme: "for",
    kind: KeywordFor,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 262,
      end: 265,
      line: 18,
      column: 8,
    ),
    lexeme: "let",
    kind: KeywordLet,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 266,
      end: 267,
      line: 18,
      column: 12,
    ),
    lexeme: "i",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 267,
      end: 268,
      line: 18,
      column: 13,
    ),
    lexeme: ":",
    kind: Colon,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 269,
      end: 272,
      line: 18,
      column: 15,
    ),
    lexeme: "i32",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 273,
      end: 274,
      line: 18,
      column: 19,
    ),
    lexeme: "=",
    kind: Equal,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 275,
      end: 276,
      line: 18,
      column: 21,
    ),
    lexeme: "a",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 276,
      end: 277,
      line: 18,
      column: 22,
    ),
    lexeme: ";",
    kind: Semicolon,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 278,
      end: 279,
      line: 18,
      column: 24,
    ),
    lexeme: "i",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 280,
      end: 281,
      line: 18,
      column: 26,
    ),
    lexeme: "<",
    kind: LeftAngle,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 282,
      end: 283,
      line: 18,
      column: 28,
    ),
    lexeme: "c",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 283,
      end: 284,
      line: 18,
      column: 29,
    ),
    lexeme: ";",
    kind: Semicolon,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 285,
      end: 286,
      line: 18,
      column: 31,
    ),
    lexeme: "i",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 287,
      end: 288,
      line: 18,
      column: 33,
    ),
    lexeme: "=",
    kind: Equal,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 289,
      end: 290,
      line: 18,
      column: 35,
    ),
    lexeme: "i",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 291,
      end: 292,
      line: 18,
      column: 37,
    ),
    lexeme: "+",
    kind: Plus,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 293,
      end: 294,
      line: 18,
      column: 39,
    ),
    lexeme: "1",
    kind: DecimalIntegerLiteral,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 294,
      end: 295,
      line: 18,
      column: 40,
    ),
    lexeme: ";",
    kind: Semicolon,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 296,
      end: 297,
      line: 18,
      column: 42,
    ),
    lexeme: "{",
    kind: LeftBrace,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 306,
      end: 312,
      line: 19,
      column: 8,
    ),
    lexeme: "printf",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 312,
      end: 313,
      line: 19,
      column: 14,
    ),
    lexeme: "(",
    kind: LeftParen,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 313,
      end: 322,
      line: 19,
      column: 15,
    ),
    lexeme: "\"i: %d\\n\"",
    kind: StringLiteral,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 322,
      end: 323,
      line: 19,
      column: 24,
    ),
    lexeme: ",",
    kind: Comma,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 324,
      end: 325,
      line: 19,
      column: 26,
    ),
    lexeme: "i",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 325,
      end: 326,
      line: 19,
      column: 27,
    ),
    lexeme: ")",
    kind: RightParen,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 326,
      end: 327,
      line: 19,
      column: 28,
    ),
    lexeme: ";",
    kind: Semicolon,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 332,
      end: 333,
      line: 20,
      column: 4,
    ),
    lexeme: "}",
    kind: RightBrace,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 339,
      end: 345,
      line: 22,
      column: 4,
    ),
    lexeme: "printf",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 345,
      end: 346,
      line: 22,
      column: 10,
    ),
    lexeme: "(",
    kind: LeftParen,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 346,
      end: 369,
      line: 22,
      column: 11,
    ),
    lexeme: "\"a: %d, b: %d, c: %d\\n\"",
    kind: StringLiteral,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 369,
      end: 370,
      line: 22,
      column: 34,
    ),
    lexeme: ",",
    kind: Comma,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 371,
      end: 372,
      line: 22,
      column: 36,
    ),
    lexeme: "a",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 372,
      end: 373,
      line: 22,
      column: 37,
    ),
    lexeme: ",",
    kind: Comma,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 374,
      end: 375,
      line: 22,
      column: 39,
    ),
    lexeme: "b",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 375,
      end: 376,
      line: 22,
      column: 40,
    ),
    lexeme: ",",
    kind: Comma,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 377,
      end: 378,
      line: 22,
      column: 42,
    ),
    lexeme: "c",
    kind: Identifier,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 378,
      end: 379,
      line: 22,
      column: 43,
    ),
    lexeme: ")",
    kind: RightParen,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 379,
      end: 380,
      line: 22,
      column: 44,
    ),
    lexeme: ";",
    kind: Semicolon,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 386,
      end: 392,
      line: 24,
      column: 4,
    ),
    lexeme: "return",
    kind: KeywordReturn,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 393,
      end: 394,
      line: 24,
      column: 11,
    ),
    lexeme: "0",
    kind: DecimalIntegerLiteral,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 394,
      end: 395,
      line: 24,
      column: 12,
    ),
    lexeme: ";",
    kind: Semicolon,
  ),
  Token(
    span: Span(
      file_name: "loops.ta",
      start: 396,
      end: 397,
      line: 25,
      column: 0,
    ),
    lexeme: "}",
    kind: RightBrace,
  ),
]
